--- a/mi_primer_app.console/mi_primer_app.console.csproj
+++ b/mi_primer_app.console/mi_primer_app.console.csproj
@@ -5,4 +5,16 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\mi_primer_app.Dominio\mi_primer_app.Dominio.csproj" />
+    <ProjectReference Include="..\mi_primer_app.Persistencia\mi_primer_app.Persistencia.csproj" />
+  </ItemGroup>
+
 </Project>
